# Vielgora

./: CMakeLists.txt  ProgramTest.h  TokoVielgora.c
Laporan/: Laporan.h
ProgramTemp/: TempProgram.h
Source/: Deklarasi.h  crud_Aksesoris.h  crud_Diskon.h  crud_Garansi.h  crud_Karyawan.h  crud_Layanan.h  crud_Member.h  crud_Produk.h  cruid_Supplier.h
TXT/: Keyboard.txt  Monitor.txt  Pojok bawahKna.txt  Pojok bawahKri.txt  Pojok kanan.txt  Pojok kiri.txt  Untitled.txt  Vielgora Stars.txt
Tampilan/: Procedure.h  Tampilan.h  menu.h
Transaksi/: Trsk_KlaimGaransi.h  Trsk_Member.h  Trsk_Pembelian.h  Trsk_Penjualan.h
